--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
 Flask==1.1.2
+Flask-GoogleRecaptcha==0.5.8
+Flask-ReCaptcha==0.4.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
+Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
@@ -26,3 +29,4 @@ SQLAlchemy==1.3.17
 twilio==6.42.0
 urllib3==1.25.9
 Werkzeug==1.0.1
+WTForms==2.3.1
