Added Javascript Projects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "c:\\github\\MyWebsite\\env\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\github\\MyWebsite\\env\\Scripts\\python.exe",
+    "liveServer.settings.port": 5501
 }
